// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> that renders an input field should add classes when props are changed 1`] = `
<div>
  <label
    class="InputContainer__label"
    for=":r1:"
  >
    Input Label
  </label>
  <div
    class="InputContainer InputContainer--context_critical InputContainer--size_medium InputContainer--isBlock InputContainer--disabled"
    data-testid="inputContainer"
  >
    <input
      aria-invalid="true"
      class="InputContainer__input InputContainer__input--size_medium"
      data-lpignore="true"
      disabled=""
      id=":r1:"
      type="text"
      value=""
    />
  </div>
  <p
    class="InputContainer__helperText"
  >
    This is a helper text
  </p>
</div>
`;

exports[`<Input> that renders an input field should render default input correctly 1`] = `
<div>
  <label
    class="InputContainer__label"
    for=":r0:"
  >
    Input Label
  </label>
  <div
    class="InputContainer InputContainer--size_medium"
    data-testid="inputContainer"
  >
    <input
      class="InputContainer__input InputContainer__input--size_medium"
      data-lpignore="true"
      id=":r0:"
      type="text"
      value="Some value"
    />
  </div>
  <p
    class="InputContainer__helperText"
  >
    This is a helper text
  </p>
</div>
`;

exports[`<SearchInput> that renders an input field should add classes when props are changed 1`] = `
<div>
  <label
    class="InputContainer__label"
    for=":r9:"
  >
    Input Label
  </label>
  <div
    class="InputContainer InputContainer--context_critical InputContainer--size_medium InputContainer--isBlock InputContainer--disabled"
    data-testid="inputContainer"
  >
    <svg
      class="InputContainer__icon InputContainer__icon--type_search"
      data-testid="default-icon"
      viewBox="0 0 24 24"
    />
    <input
      aria-invalid="true"
      class="InputContainer__input InputContainer__input--size_medium"
      data-lpignore="true"
      disabled=""
      id=":r9:"
      type="text"
      value=""
    />
    <svg
      class="InputContainer__icon InputContainer__icon--type_clear"
      data-testid="default-icon"
      viewBox="0 0 24 24"
    />
  </div>
  <p
    class="InputContainer__helperText"
  >
    This is a helper text
  </p>
</div>
`;

exports[`<SearchInput> that renders an input field should render default SearchInput correctly 1`] = `
<div>
  <label
    class="InputContainer__label"
    for=":r8:"
  >
    Input Label
  </label>
  <div
    class="InputContainer InputContainer--size_medium"
    data-testid="inputContainer"
  >
    <svg
      class="InputContainer__icon InputContainer__icon--type_search InputContainer__icon--bold"
      data-testid="default-icon"
      viewBox="0 0 24 24"
    />
    <input
      class="InputContainer__input InputContainer__input--size_medium"
      data-lpignore="true"
      id=":r8:"
      type="text"
      value="Some value!"
    />
    <svg
      class="InputContainer__icon InputContainer__icon--type_clear InputContainer__icon--visible"
      data-testid="default-icon"
      viewBox="0 0 24 24"
    />
  </div>
  <p
    class="InputContainer__helperText"
  >
    This is a helper text
  </p>
</div>
`;
